--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "minio": "^7.0.19"
   },
   "devDependencies": {
+    "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.3"
   }
