feat: auto release

--- a/.releaserc
+++ b/.releaserc
@@ -9,6 +9,7 @@
       "message": "chore(release): ${nextRelease.version} \n\n${nextRelease.notes}"
     }],
     "@semantic-release/github",
+    "@semantic-release/npm",
   ],
   "preset": "angular"
 }
