--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "strapi-provider-upload-minio",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.1",
   "description": "Minio provider for Strapi file upload.",
   "directories": {
     "lib": "./lib"
+  },
+  "scripts": {
+    "postversion": "cp -r package.json .. && cp -r npm-shrinkwrap.json .."
   },
   "author": "shaddock",
   "main": "./lib",
