--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "strapi-provider-upload-minio",
+  "name": "@shaddock/strapi-provider-upload-minio",
   "version": "1.0.0-alpha.2",
   "description": "Minio provider for Strapi file upload.",
   "directories": {
