--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "dependencies": {
     "minio": "^7.0.19"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "tag": "latest"
+  },
   "devDependencies": {
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
