--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
+    "access": "public",
     "tag": "latest"
   },
   "devDependencies": {
